Added shopping service

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 AUTH_BASE_URL="http://hepsitrend.auth/"
+SHOPPING_BASE_URL="http://hepsitrend.shopping/"
