--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,4 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 AUTH_BASE_URL="http://hepsitrend.auth/"
 SHOPPING_BASE_URL="http://hepsitrend.shopping/"
 IYZICO_BASE_URL="http://hepsitrend.iyzico/"
+INVOICE_NOT_BASE_URL="http://hepsitrend.invoicenot/"
