--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,7 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-AUTH_BASE_URL="http://hepsitrend.auth/"
-SHOPPING_BASE_URL="http://hepsitrend.shopping/"
-IYZICO_BASE_URL="http://hepsitrend.iyzico/"
-INVOICE_NOT_BASE_URL="http://hepsitrend.invoicenot/"
+AUTH_BASE_URL="http://127.0.0.1:8008/"
+SHOPPING_BASE_URL="http://127.0.0.1:8007/"
+IYZICO_BASE_URL="http://127.0.0.1:8005/"
+INVOICE_NOT_BASE_URL="http://127.0.0.1:8006/"
